# hw_2023

./: .gitignore  README.md
code/: CMakeLists.txt  CodeCraft_zip.sh  codeLog  code_unused.yqy  code_unused.yqy2  code_unused.yqy3  config.hpp  debug.sh  grid.hpp  hack.sh  input.hpp  main.cpp  path.hpp  pipe.py  radar.hpp  radarOutput.txt  robot.hpp  run.sh  tc.py  tc.txt  test.sh  upload.sh  vector.hpp  worktable.hpp  xty.py
genMap/: genMap.py  path1.txt  path2.txt
genMap/maps/: 1.txt  2.txt
备选地图/: createMap.py  zzy1_1.txt  zzy1_2.txt  zzy2.txt  zzy2_1.txt  zzy3_1.txt  zzy4.txt  zzy4_1.txt  zzy4_2.txt  复赛zzy2.txt  复赛zzy3.txt  复赛正式赛1.txt  复赛正式赛2.txt  复赛正式赛3.txt  复赛正式赛4.txt  复赛训练赛1.txt  复赛训练赛2.txt  复赛训练赛3.txt  复赛训练赛4.txt
